# marimo_jupyter_ci

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-jupyter.yml  ci-marimo.yml
docs/: findings.md
notebooks/jupyter/: analysis.ipynb  test_analysis.ipynb
notebooks/marimo/: analysis.py  test_analysis.py
src/: helpers.py
tests/: test_helpers.py
