[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo-jupyter-ci"
version = "0.1.0"
description = "Comparing CI workflows: marimo (.py) vs Jupyter (.ipynb)"
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "jupyter",
    "nbconvert",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "nbqa",
    "nbmake",
    "pyright",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
include = ["src", "notebooks/marimo"]
reportReturnType = "warning"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "notebooks/marimo"]
